2317: Avoid use of deprecated Thread.getId()
Reviewed-by: erikj, zsong